Make <object> do the same text/plain sniffing that <iframe> does, and use the content type hint if the type comes back as application/octet-stream or sniffed-binary.  Bug 389677, r+sr=biesi, a=sicking